--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						var json = JSON.parse(text);
 						var str = '';
 						str += '<div class="ui large pointing menu" id="menu">';
-						str += '	<a href="" class="active item">文章</a>';
+						str += '	<a href="" class="active item">公告</a>';
 						str += '	<div class="right menu">';
 						str += '		<div class="item">';
 						str += '			<div class="ui transparent icon input">';
